<resources>
    <string name="nome_cadastro">NOME</string>
    <string name="slogan">Encontre seu time!</string>
    <string name="logo">logo</string>
    <string name="digite_sua_senha">SENHA</string>
    <string name="acessar_sua_conta">ACESSAR SUA CONTA</string>
    <string name="digite_o_seu_e_mail">E-MAIL</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="entre_usando">ENTRE USANDO</string>
    <string name="n_o_tenho_conta">NÃO TENHO CONTA</string>
    <string name="mensagem_home">Olá, %1$s</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="nome">Nome%1$s</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="data">Data: </string>
    <string name="local">Local: </string>
    <string name="categoria">CATEGORIA</string>
    <string name="criar_evento">CRIAR EVENTO</string>
    <string name="nome_perfil">NOME</string>
    <string name="email_perfil">EMAIL</string>
    <string name="telefone_perfil">TELEFONE</string>
    <string name="senha_perfil">SENHA</string>
    <string name="salvar">SALVAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meus_eventos">MEUS EVENTOS</string>
    <string name="eventos">EVENTOS</string>
    <string name="criarevento">CRIAR EVENTO</string>
    <string name="nome_do_evento">NOME DO EVENTO</string>
    <string name="data_evento">DATA</string>
    <string name="horario_evento">HORÁRIO</string>
    <string name="local_evento">LOCAL</string>
    <string name="categoria_evento">CATEGORIA</string>
    <string name="inserir_imagem">INSERIR UMA IMAGEM</string>
    <string name="segurança_evento">Esse evento é seguro para:</string>
    <string name="check_trans">Mulheres trans</string>
    <string name="check_bi">Mulheres bissexuais</string>
    <string name="check_les">Mulheres lésbicas</string>
    <string name="check_naobi">Pessoas não-binárias</string>
    <string name="add_adm">ADICIONAR ADMINISTRADORAS</string>
    <string name="cadastrar_evento">CADASTRAR EVENTO</string>
    <string name="pesquisar">PESQUISAR</string>
    <string name="resultados">RESULTADOS</string>
    <string name="filtros">FILTROS</string>
    <string name="mostrar_mais">MOSTRAR MAIS</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="app_name">MenusCardView</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos_drawer">Meus Eventos</string>
    <string name="pesquisar_drawer">Pesquisar</string>
    <string name="sair">Sair</string>
    <string name="favoritar">FAVORITAR</string>
    <string name="elas_no_jogo">Elas no jogo</string>
    <string name="ola_nome">Olá, Nome</string>
    <string name="identificacao">IDENTIFICO-ME COMO</string>
    <string name="email_cadastro">EMAIL</string>
    <string name="telefone_cadastro">TELEFONE</string>
    <string name="senha_cadastro">SENHA</string>
    <string name="confirmar_senha">CONFIRMAR SENHA</string>
    <string name="seleciona_interesses">SELECIONE 3 INTERESSES</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="linha1">Linha 1</string>
    <string name="linha2">Linha 2</string>
    <string name="ola">Olá</string>
    <string name="usuario">Usúario</string>
    <string name="preencha_campo">Preencha os campos!
    </string>

    <string name="facebook_app_id">851777708640114</string>
    <string name="fb_login_protocol_scheme">851777708640114</string>

    <string name="editar_perfil">Editar Perfil</string>
    <string-array name="lista_identificacao">
        <item>mulher cis</item>
        <item>mulher lésbica</item>
        <item>mulher trans</item>
        <item>não-binário</item>
        <item>não me identifico como mulher nem não-binário</item>
    </string-array>

    <string-array name="lista_esportes">
     <item>Futebol</item>
        <item>Futsal</item>
        <item>Basquete</item>
    </string-array>


</resources>