<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_watercolor">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagemLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@+id/criareventoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/criareventoText"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/criar_evento"
            android:textColor="@color/textoPesquisa"
            android:textSize="30sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/nomeEvento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toEndOf="@+id/imagemLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomeEvento"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            android:background="@color/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagemLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_do_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/nome_do_evento"
                    android:textSize="14sp"
                    android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLocalDoEvent"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/container"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/local_do_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/local_evento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textStyle="bold"
                    android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkTrans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_trans"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/checklbi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/segurancaEvento" />

        <CheckBox
            android:id="@+id/checkles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_les"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/check_naobi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkTrans" />

        <CheckBox
            android:id="@+id/checklbi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_bi"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkTrans"
            app:layout_constraintTop_toBottomOf="@+id/segurancaEvento" />

        <CheckBox
            android:id="@+id/check_naobi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_naobi"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkles"
            app:layout_constraintTop_toBottomOf="@+id/checklbi" />

        <Button
            android:id="@+id/buttonCadastrarEvento"
            android:layout_width="253dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/btn"
            android:text="@string/cadastrar_evento"
            android:textColor="@color/branco"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_naobi" />

        <Button
            android:id="@+id/inserirImagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brancotransparente"
            android:text="@string/inserir_imagem"
            android:textColor="@color/textoPesquisa"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="spinner_esportes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/container"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/nomeEvento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/horario_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/horario_evento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textStyle="bold"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/container"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/branco"
            android:textColorHint="@color/branco"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeEvento">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/data_evento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:hint="@string/data_evento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textStyle="bold"
                    android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/segurancaEvento"
            android:layout_width="184dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/segurança_evento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_esportes" />

        <TextView
            android:id="@+id/textInputCategori"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/categoria_evento"
            android:textColor="@color/textoPesquisa"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/spinner_esportes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLocalDoEvent"
            app:layout_constraintVertical_bias="0.464" />

        <Spinner
            android:id="@+id/spinner_esportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/lato"
            android:orientation="vertical"
            android:padding="5dp"
            android:textColor="@color/branco"
            android:textSize="14sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/textInputCategori"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inserirImagem"
            app:layout_constraintVertical_bias="0.509" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>