<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_watercolor">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/acessar_sua_conta"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/acessar_sua_conta"
        android:textColor="@color/textoPesquisa"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hint_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/container"
        android:hint="@string/digite_o_seu_e_mail"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acessar_sua_conta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hint_senha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/container"
        android:hint="@string/digite_sua_senha"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botao_entrar"
        android:layout_width="225dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/btn"
        android:fontFamily="@font/lato"
        android:text="@string/entrar"
        android:textColor="@color/branco"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint_senha" />

    <TextView
        android:id="@+id/entre_usando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/entre_usando"
        android:textColor="@color/textoPesquisa"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_entrar" />

    <TextView
        android:id="@+id/nao_tem_conta"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/n_o_tenho_conta"
        android:textColor="@color/textoPesquisa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botao_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_btn" />

    <Button
        android:id="@+id/botao_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/img_btn"
        android:fontFamily="@font/lato_bold"
        android:text="@string/cadastre_se"
        android:textColor="@color/btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nao_tem_conta"
        app:layout_constraintTop_toBottomOf="@+id/google_btn" />

    <ImageButton
        android:id="@+id/facebook_btn"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/img_btn"
        app:layout_constraintBottom_toTopOf="@+id/nao_tem_conta"
        app:layout_constraintEnd_toStartOf="@+id/google_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entre_usando"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/google_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="16dp"
        android:background="@color/img_btn"
        app:layout_constraintBottom_toTopOf="@+id/botao_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook_btn"
        app:layout_constraintTop_toBottomOf="@+id/entre_usando"
        app:srcCompat="@drawable/google" />

</androidx.constraintlayout.widget.ConstraintLayout>