<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    tools:context="br.com.elasnojogo.views.MeusEventosFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_favoritos"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/container"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritos" />

    <TextView
        android:id="@+id/text_view_nomeevento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/nome_evento"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/local"
        android:textSize="12sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toBottomOf="@+id/text_view_nomeevento" />

    <TextView
        android:id="@+id/text_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/data_evento"
        android:textSize="12sp"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_favoritos"
        app:layout_constraintTop_toBottomOf="@+id/text_view_local" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>